tests/sources/good/broken_antenna.graph
13 13
3
3
1 2 4 6
3 13
6
3 5 7 9
6
9
6 8 10 12
9
12
9 11 13
12 4
