tests/sources/bad/extra_edge_empty_rectangle.graph
11 11
4 9
3 10
6 2
1 5
4 7
3 8
5 8
6 7
1 11
2 11
9 10
